Version 1.0.7
=============

* Fix TR3 puna boss not blocking projectiles (grenade, rocket, harpoon, bolt).
* Fix TR3 puna boss and TR5 roman statue taking fire when shoot by explosive ammo.
* Fix silent crash if hair object or skin joints are missing.
* Fix holster meshes not displaying for Lara's shadow.
* Use Lara object's own meshes if Lara skin object does not exist in level file.
* Add TR3 Sophia Leigh with following OCBs:	
	- 1 – Normal mode. Sophia behaves like a regular enemy.
	- 2 – Tower Mode. Behaviour matched from Tomb Raider III. Invincible unless triggered to be killed.
	- 6 – Tower Mode with Volumes. Same as Tower Mode but Sophia’s ascent can be controlled using volumes in Tomb Editor.
* Add Airlock_Switch object. Achieved by putting valve switch trigger and door trigger on the same sector (Valves to open doors from TR5 submarine levels).  
* Improved behaviour of Tiger and Lion enemies. 
* Fix Valve switch unable to untrigger objects.
* Fix Valve and Wall Hole (OCB 5 nad 6) not work as a timed switch.
* Polish the distance position between Lara and switch.
* Add OCB 7 - Custom Lua switch (Usage of ItemFlags in lua required).
	- ItemFlags[4] = on Anination
	- ItemFlags[5] = off Animation
	- ItemFlags[6] = Distance to use the switch.
* Implement squash and stretch water bubbles.

Lua API Changes
* Fix Camera:SetPosition not updating camera position when it is played simultaneously.
* Add Moveable:GetAirborne and Moveable:SetAirborne.
* Add Moveable:GetLocationAI and Moveable:SetLocationAI.

Version 1.0.6
=============

* Fix major pathfinding bug which could have caused lots of issues with enemy behaviour.
* Fix potential random crashes due to incorrect rendering behaviour.
* Fix savegame crash for disabled enemies with partially set activation mask.
* Fix certain enemies not damaging Lara if binoculars or lasersight mode is active.
* Fix invisible Lara after starting a new game from title flyby with hidden Lara.