@@ -1,7 +1,9 @@
 Version 1.0.7
 =============
 
-* Fix TR3 puna boss not blocking projectiles (grenade, rocket, harpoon, bolt).
+* Fix blockable lot type (big entities like t-rex and shiva) which was not able to step up 1 click and drop 2 click.
+* Fix TR3 shiva not taking explosive damage (should still block with the sword).
+* Fix TR3 puna boss not blocking projectiles (grenade, rocket, harpoon, bolt) with the shield.
 * Fix TR3 puna boss and TR5 roman statue taking fire when shoot by explosive ammo.
 * Fix silent crash if hair object or skin joints are missing.
 * Fix holster meshes not displaying for Lara's shadow.
